API AND MOBILE UI LOGIC UPDATED

--- a/mobile/lib/l10n/app_en.arb
+++ b/mobile/lib/l10n/app_en.arb
@@ -215,6 +215,414 @@
   "deliveryFee": "Delivery Fee",
   "addressRequiredTitle": "Address Required",
   "addressRequiredMessage": "You need to add a delivery address before placing an order.",
-  "addAddress": "Add Address"
+  "addAddress": "Add Address",
+  "legalDocuments": "Legal Documents",
+  "termsOfUse": "Terms of Use",
+  "privacyPolicy": "Privacy Policy",
+  "refundPolicy": "Refund Policy",
+  "distanceSalesAgreement": "Distance Sales Agreement",
+  "loadingContent": "Loading content...",
+  "contentNotAvailable": "Content not available",
+  "error": "Error",
+  "profileUpdated": "Profile updated",
+  "updatePersonalInfo": "Update your personal information",
+  "phoneNumber": "Phone Number",
+  "profileImageUrl": "Profile Image URL",
+  "dateOfBirth": "Date of Birth",
+  "notSelected": "Not selected",
+  "profileLoadFailed": "Failed to load profile",
+  "settingsUpdateFailed": "Failed to update settings",
+  "notifications": "Notifications",
+  "pushNotifications": "Push Notifications",
+  "promotionalNotifications": "Promotional Notifications",
+  "newProducts": "New Products",
+  "more": "More",
+  "accessibilityAndDisplay": "Accessibility & Display",
+  "helpCenter": "Help Center",
+  "howCanWeHelpYou": "How can we help you?",
+  "faq": "FAQ",
+  "frequentlyAskedQuestions": "Frequently asked questions",
+  "contactSupport": "Contact Support",
+  "callUs": "Call Us",
+  "liveChat": "Live Chat",
+  "available24x7": "Available 24/7",
+  "close": "Close",
+  "logoutConfirmTitle": "Logout",
+  "logoutConfirmMessage": "Are you sure you want to logout from your account?",
+  "passwordsDoNotMatch": "Passwords do not match",
+  "passwordChangedSuccess": "Password changed successfully",
+  "changePasswordDescription": "Enter your current password and choose a new one",
+  "currentPassword": "Current Password",
+  "currentPasswordRequired": "Current password is required",
+  "newPassword": "New Password",
+  "newPasswordRequired": "New password is required",
+  "confirmNewPassword": "Confirm Password",
+  "confirmPasswordRequired": "Password confirmation is required",
+  "secureYourAccount": "Secure your account",
+  "addressesLoadFailed": "Failed to load addresses",
+  "deleteAddressTitle": "Delete Address",
+  "deleteAddressConfirm": "Are you sure you want to delete this address?",
+  "delete": "Delete",
+  "addressDeleted": "Address deleted",
+  "defaultAddressUpdated": "Default address updated",
+  "manageDeliveryAddresses": "Manage your delivery addresses",
+  "noAddressesYet": "No addresses yet",
+  "tapToAddAddress": "Tap + button to add a new address",
+  "defaultLabel": "Default",
+  "edit": "Edit",
+  "setAsDefault": "Set as Default",
+  "addressCountSingular": "1 address",
+  "addressCountPlural": "{count} addresses",
+  "@addressCountPlural": {
+    "placeholders": {
+      "count": {}
+    }
+  },
+  "locationServicesDisabled": "Location services are disabled",
+  "pleaseSelectLocation": "Please select a location",
+  "selectedLocation": "Selected Location",
+  "addressTitleOptional": "Address Title (Optional)",
+  "canBeLeftEmpty": "Can be left empty",
+  "address": "Address",
+  "city": "City",
+  "district": "District",
+  "selectOrDragMarkerOnMap": "Select a location on the map or drag the marker",
+  "saveAddressButton": "Save Address",
+  "selectAddress": "Select Address",
+  "selectLocationFromMap": "Select location from map",
+  "addressAdded": "Address added",
+  "addressUpdated": "Address updated",
+  "editAddress": "Edit Address",
+  "addNewAddress": "Add New Address",
+  "updateAddressInfo": "Update your address information",
+  "enterDeliveryAddressDetails": "Enter your delivery address details",
+  "addressTitleHint": "Address Title (Home, Work, etc.)",
+  "titleRequired": "Title is required",
+  "selectAddressFromMap": "Select Address from Map",
+  "fullAddress": "Full Address",
+  "addressRequired": "Address is required",
+  "cityRequired": "City is required",
+  "districtRequired": "District is required",
+  "postalCodeOptional": "Postal Code (Optional)",
+  "updateAddressButton": "Update Address",
+  "updateAddressDetails": "Update address details",
+  "createNewAddress": "Create new address",
+  "orderUpdates": "Order Updates",
+  "orderUpdatesDescription": "Get notified when your order status changes",
+  "promotions": "Promotions",
+  "promotionsDescription": "Special offers and promotions",
+  "newProductsDescription": "Get notified when new products are added",
+  "settingsSaved": "Settings saved",
+  "manageNotificationPreferences": "Manage your notification preferences",
+  "orderHistoryDescription": "View your past orders",
+  "myAddressesDescription": "Manage your delivery addresses",
+  "changePasswordSubtitle": "Change your password and enhance security",
+  "notificationSettingsDescription": "Manage your notification preferences",
+  "selectLanguageDescription": "Change application language",
+  "legalDocumentsDescription": "Terms of use and policies",
+  "helpCenterDescription": "FAQ and support line",
+  "logoutDescription": "Sign out from your account",
+  "vendorRegister": "Vendor Registration",
+  "talabiBusiness": "Talabi Business",
+  "createBusinessAccount": "Create Business Account",
+  "createYourStoreAndStartSelling": "Create your store and start selling",
+  "businessName": "Business Name",
+  "businessNameRequired": "Business name is required",
+  "phoneNumberRequired": "Phone number is required",
+  "createVendorAccount": "Create Vendor Account",
+  "alreadyHaveVendorAccount": "Already have a vendor account? ",
+  "isCustomerAccount": "Customer account? ",
+  "emailAlreadyExists": "An account with this email already exists.",
+  "enterFourDigitCode": "Please enter the 4-digit code",
+  "emailVerifiedSuccess": "Email address verified successfully",
+  "emailVerifiedLoginFailed": "Email verified but auto-login failed. Please login manually.",
+  "verificationFailed": "Verification failed",
+  "verificationCodeResent": "Verification code resent",
+  "codeSendFailed": "Failed to send code",
+  "fourDigitVerificationCode": "4-Digit Verification Code",
+  "enterCodeSentToEmail": "Enter the 4-digit code sent to {email}",
+  "@enterCodeSentToEmail": {
+    "placeholders": {
+      "email": {}
+    }
+  },
+  "@codeExpiresIn": {
+    "placeholders": {
+      "time": {}
+    }
+  },
+  "resendCode": "Resend Code",
+  "areYouCourier": "Are you a courier?",
+  "courierSignIn": "Courier Sign In",
+  "courierLoginLink": "Courier Login",
+  "roleCustomer": "Customer",
+  "roleVendor": "Vendor",
+  "roleCourier": "Courier",
+  "roleAdmin": "Admin",
+  "activeDeliveries": "Active Deliveries",
+  "deliveryHistory": "Delivery History",
+  "earnings": "Earnings",
+  "deliveries": "Deliveries",
+  "noActiveDeliveries": "No active deliveries",
+  "courierProfileNotFound": "Courier profile not found",
+  "profileUpdatedSuccessfully": "Profile updated successfully",
+  "invalidStatus": "Invalid status. Valid values: Offline, Available, Busy, Break, Assigned",
+  "cannotGoAvailableOutsideWorkingHours": "Cannot go available outside working hours",
+  "cannotGoOfflineWithActiveOrders": "Cannot go offline with active orders",
+  "statusUpdated": "Status updated",
+  "locationUpdatedSuccessfully": "Location updated successfully",
+  "invalidLatitude": "Invalid latitude",
+  "invalidLongitude": "Invalid longitude",
+  "orderAcceptedSuccessfully": "Order accepted successfully",
+  "orderRejectedSuccessfully": "Order rejected successfully",
+  "orderPickedUpSuccessfully": "Order picked up successfully",
+  "orderDeliveredSuccessfully": "Order delivered successfully",
+  "deliveryProofSubmittedSuccessfully": "Delivery proof submitted successfully",
+  "orderNotFoundOrNotAssigned": "Order not found or not assigned to you",
+  "orderMustBeDeliveredBeforeSubmittingProof": "Order must be delivered before submitting proof",
+  "failedToAcceptOrder": "Failed to accept order. It might be already taken or cancelled",
+  "failedToRejectOrder": "Failed to reject order",
+  "failedToPickUpOrder": "Failed to pick up order",
+  "failedToDeliverOrder": "Failed to deliver order",
+  "failedToLoadProfile": "Failed to load courier profile",
+  "failedToUpdateStatus": "Failed to update status",
+  "failedToUpdateLocation": "Failed to update location",
+  "failedToLoadStatistics": "Failed to load statistics",
+  "failedToLoadActiveOrders": "Failed to load active orders",
+  "failedToLoadOrderDetail": "Failed to load order detail",
+  "failedToLoadTodayEarnings": "Failed to load today earnings",
+  "failedToLoadWeeklyEarnings": "Failed to load weekly earnings",
+  "failedToLoadMonthlyEarnings": "Failed to load monthly earnings",
+  "failedToLoadEarningsHistory": "Failed to load earnings history",
+  "failedToSubmitProof": "Failed to submit proof",
+  "failedToUpdateProfile": "Failed to update profile",
+  "failedToUploadImage": "Failed to upload image",
+  "noFileUploaded": "No file uploaded",
+  "internalServerErrorDuringUpload": "Internal server error during upload",
+  "checkAvailability": "Check Availability",
+  "orderHistory": "Order History",
+  "businessSettings": "Business Settings",
+  "businessActive": "Business Active",
+  "customersCanPlaceOrders": "Customers can place orders",
+  "orderTakingClosed": "Order taking is closed",
+  "businessOperations": "Business Operations",
+  "minimumOrderAmount": "Minimum Order Amount",
+  "estimatedDeliveryTime": "Estimated Delivery Time (minutes)",
+  "enterValidAmount": "Enter a valid amount",
+  "enterValidTime": "Enter a valid time",
+  "optional": "Optional",
+  "deliveryFee": "Delivery Fee",
+  "addressRequiredTitle": "Address Required",
+  "addressRequiredMessage": "You need to add a delivery address before placing an order.",
+  "addAddress": "Add Address",
+  "legalDocuments": "Legal Documents",
+  "termsOfUse": "Terms of Use",
+  "privacyPolicy": "Privacy Policy",
+  "refundPolicy": "Refund Policy",
+  "distanceSalesAgreement": "Distance Sales Agreement",
+  "loadingContent": "Loading content...",
+  "contentNotAvailable": "Content not available",
+  "error": "Error",
+  "profileUpdated": "Profile updated",
+  "updatePersonalInfo": "Update your personal information",
+  "phoneNumber": "Phone Number",
+  "profileImageUrl": "Profile Image URL",
+  "dateOfBirth": "Date of Birth",
+  "notSelected": "Not selected",
+  "profileLoadFailed": "Failed to load profile",
+  "settingsUpdateFailed": "Failed to update settings",
+  "notifications": "Notifications",
+  "pushNotifications": "Push Notifications",
+  "promotionalNotifications": "Promotional Notifications",
+  "newProducts": "New Products",
+  "more": "More",
+  "accessibilityAndDisplay": "Accessibility & Display",
+  "helpCenter": "Help Center",
+  "howCanWeHelpYou": "How can we help you?",
+  "faq": "FAQ",
+  "frequentlyAskedQuestions": "Frequently asked questions",
+  "contactSupport": "Contact Support",
+  "callUs": "Call Us",
+  "liveChat": "Live Chat",
+  "available24x7": "Available 24/7",
+  "close": "Close",
+  "logoutConfirmTitle": "Logout",
+  "logoutConfirmMessage": "Are you sure you want to logout from your account?",
+  "passwordsDoNotMatch": "Passwords do not match",
+  "passwordChangedSuccess": "Password changed successfully",
+  "changePasswordDescription": "Enter your current password and choose a new one",
+  "currentPassword": "Current Password",
+  "currentPasswordRequired": "Current password is required",
+  "newPassword": "New Password",
+  "newPasswordRequired": "New password is required",
+  "confirmNewPassword": "Confirm Password",
+  "confirmPasswordRequired": "Password confirmation is required",
+  "secureYourAccount": "Secure your account",
+  "addressesLoadFailed": "Failed to load addresses",
+  "deleteAddressTitle": "Delete Address",
+  "deleteAddressConfirm": "Are you sure you want to delete this address?",
+  "delete": "Delete",
+  "addressDeleted": "Address deleted",
+  "defaultAddressUpdated": "Default address updated",
+  "manageDeliveryAddresses": "Manage your delivery addresses",
+  "noAddressesYet": "No addresses yet",
+  "tapToAddAddress": "Tap + button to add a new address",
+  "defaultLabel": "Default",
+  "edit": "Edit",
+  "setAsDefault": "Set as Default",
+  "addressCountSingular": "1 address",
+  "addressCountPlural": "{count} addresses",
+  "@addressCountPlural": {
+    "placeholders": {
+      "count": {}
+    }
+  },
+  "locationServicesDisabled": "Location services are disabled",
+  "pleaseSelectLocation": "Please select a location",
+  "selectedLocation": "Selected Location",
+  "addressTitleOptional": "Address Title (Optional)",
+  "canBeLeftEmpty": "Can be left empty",
+  "address": "Address",
+  "city": "City",
+  "district": "District",
+  "selectOrDragMarkerOnMap": "Select a location on the map or drag the marker",
+  "saveAddressButton": "Save Address",
+  "selectAddress": "Select Address",
+  "selectLocationFromMap": "Select location from map",
+  "addressAdded": "Address added",
+  "addressUpdated": "Address updated",
+  "editAddress": "Edit Address",
+  "addNewAddress": "Add New Address",
+  "updateAddressInfo": "Update your address information",
+  "enterDeliveryAddressDetails": "Enter your delivery address details",
+  "addressTitleHint": "Address Title (Home, Work, etc.)",
+  "titleRequired": "Title is required",
+  "selectAddressFromMap": "Select Address from Map",
+  "fullAddress": "Full Address",
+  "addressRequired": "Address is required",
+  "cityRequired": "City is required",
+  "districtRequired": "District is required",
+  "postalCodeOptional": "Postal Code (Optional)",
+  "updateAddressButton": "Update Address",
+  "updateAddressDetails": "Update address details",
+  "createNewAddress": "Create new address",
+  "orderUpdates": "Order Updates",
+  "orderUpdatesDescription": "Get notified when your order status changes",
+  "promotions": "Promotions",
+  "promotionsDescription": "Special offers and promotions",
+  "newProductsDescription": "Get notified when new products are added",
+  "settingsSaved": "Settings saved",
+  "manageNotificationPreferences": "Manage your notification preferences",
+  "orderHistoryDescription": "View your past orders",
+  "myAddressesDescription": "Manage your delivery addresses",
+  "changePasswordSubtitle": "Change your password and enhance security",
+  "notificationSettingsDescription": "Manage your notification preferences",
+  "selectLanguageDescription": "Change application language",
+  "legalDocumentsDescription": "Terms of use and policies",
+  "helpCenterDescription": "FAQ and support line",
+  "logoutDescription": "Sign out from your account",
+  "vendorRegister": "Vendor Registration",
+  "talabiBusiness": "Talabi Business",
+  "createBusinessAccount": "Create Business Account",
+  "createYourStoreAndStartSelling": "Create your store and start selling",
+  "businessName": "Business Name",
+  "businessNameRequired": "Business name is required",
+  "phoneNumberRequired": "Phone number is required",
+  "createVendorAccount": "Create Vendor Account",
+  "alreadyHaveVendorAccount": "Already have a vendor account? ",
+  "isCustomerAccount": "Customer account? ",
+  "emailAlreadyExists": "An account with this email already exists.",
+  "enterFourDigitCode": "Please enter the 4-digit code",
+  "emailVerifiedSuccess": "Email address verified successfully",
+  "emailVerifiedLoginFailed": "Email verified but auto-login failed. Please login manually.",
+  "verificationFailed": "Verification failed",
+  "verificationCodeResent": "Verification code resent",
+  "codeSendFailed": "Failed to send code",
+  "fourDigitVerificationCode": "4-Digit Verification Code",
+  "enterCodeSentToEmail": "Enter the 4-digit code sent to {email}",
+  "@enterCodeSentToEmail": {
+    "placeholders": {
+      "email": {}
+    }
+  },
+  "codeExpiresIn": "Code will expire in {time}",
+  "@codeExpiresIn": {
+    "placeholders": {
+      "time": {}
+    }
+  },
+  "resendCode": "Resend Code",
+  "settingsLoadError": "Failed to load settings: {error}",
+  "@settingsLoadError": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "settingsUpdated": "Settings updated",
+  "errorWithMessage": "Error: {message}",
+  "@errorWithMessage": {
+    "placeholders": {
+      "message": {}
+    }
+  },
+  "save": "Save",
+  "reviewApproved": "Review approved",
+  "reviewApproveError": "Error approving review: {error}",
+  "@reviewApproveError": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "rejectReview": "Reject Review",
+  "rejectReviewConfirmation": "Are you sure you want to reject this review? This cannot be undone.",
+  "cancel": "Cancel",
+  "reject": "Reject",
+  "reviewRejected": "Review rejected",
+  "reviewRejectError": "Error rejecting review: {error}",
+  "@reviewRejectError": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "reviewDetail": "Review Detail",
+  "userId": "User ID: {id}",
+  "@userId": {
+    "placeholders": {
+      "id": {}
+    }
+  },
+  "rating": "Rating",
+  "comment": "Comment",
+  "noComment": "No comment",
+  "date": "Date: {date}",
+  "@date": {
+    "placeholders": {
+      "date": {}
+    }
+  },
+  "approve": "Approve",
+  "verify": "Verify",
+  "placeOrder": "Place Order",
+  "checkoutTitle": "Order Confirmation",
+  "deliveryAddress": "Delivery Address",
+  "selectAddress": "Select Address",
+  "changeAddress": "Change",
+  "paymentMethod": "Payment Method",
+  "cash": "Cash",
+  "creditCard": "Credit Card",
+  "mobilePayment": "Mobile Payment",
+  "comingSoon": "Coming Soon",
+  "orderNote": "Order Note",
+  "orderNotePlaceholder": "Add note for courier (optional)",
+  "estimatedDelivery": "Estimated Delivery",
+  "minutes": "minutes",
+  "orderSummary": "Order Summary",
+  "confirmOrder": "Confirm Order",
+  "pleaseSelectAddress": "Please select a delivery address",
+  "pleaseSelectPaymentMethod": "Please select a payment method",
+  "orderCreatedSuccess": "Your order has been created successfully!",
+  "noAddressFound": "No address found",
+  "addNewAddress": "Add New Address",
+  "cashDescription": "You can pay cash to the courier at the door.",
+  "paymentComingSoonDescription": "This payment method will be available soon."
 }
-
