--- a/mobile/lib/l10n/app_tr.arb
+++ b/mobile/lib/l10n/app_tr.arb
@@ -215,6 +215,409 @@
   "deliveryFee": "Teslimat Ücreti",
   "addressRequiredTitle": "Adres Gerekli",
   "addressRequiredMessage": "Sipariş vermek için önce bir teslimat adresi eklemeniz gerekiyor.",
-  "addAddress": "Adres Ekle"
+  "addAddress": "Adres Ekle",
+  "legalDocuments": "Yasal Belgeler",
+  "termsOfUse": "Kullanım Şartları",
+  "privacyPolicy": "Gizlilik Politikası",
+  "refundPolicy": "İade ve İptal Politikası",
+  "distanceSalesAgreement": "Mesafeli Satış Sözleşmesi",
+  "loadingContent": "İçerik yükleniyor...",
+  "contentNotAvailable": "İçerik mevcut değil",
+  "error": "Hata",
+  "profileUpdated": "Profil güncellendi",
+  "updatePersonalInfo": "Kişisel bilgilerinizi güncelleyin",
+  "phoneNumber": "Telefon Numarası",
+  "profileImageUrl": "Profil Resmi URL",
+  "dateOfBirth": "Doğum Tarihi",
+  "notSelected": "Seçilmedi",
+  "profileLoadFailed": "Profil yüklenemedi",
+  "settingsUpdateFailed": "Ayarlar güncellenemedi",
+  "notifications": "Bildirimler",
+  "pushNotifications": "Anlık Bildirimler",
+  "promotionalNotifications": "Promosyon Bildirimleri",
+  "newProducts": "Yeni Ürünler",
+  "more": "Daha Fazla",
+  "accessibilityAndDisplay": "Erişilebilirlik ve Görünüm",
+  "helpCenter": "Yardım Merkezi",
+  "howCanWeHelpYou": "Size nasıl yardımcı olabiliriz?",
+  "faq": "SSS",
+  "frequentlyAskedQuestions": "Sıkça sorulan sorular",
+  "contactSupport": "Destek ile İletişim",
+  "callUs": "Bizi Arayın",
+  "liveChat": "Canlı Sohbet",
+  "available24x7": "7/24 ulaşılabilir",
+  "close": "Kapat",
+  "logoutConfirmTitle": "Çıkış Yap",
+  "logoutConfirmMessage": "Hesabınızdan çıkmak istediğinize emin misiniz?",
+  "passwordsDoNotMatch": "Şifreler eşleşmiyor",
+  "passwordChangedSuccess": "Şifre başarıyla değiştirildi",
+  "changePasswordDescription": "Mevcut şifrenizi girin ve yeni şifrenizi seçin",
+  "currentPassword": "Mevcut Şifre",
+  "currentPasswordRequired": "Mevcut şifre gerekli",
+  "newPassword": "Yeni Şifre",
+  "newPasswordRequired": "Yeni şifre gerekli",
+  "confirmNewPassword": "Şifre Tekrarı",
+  "confirmPasswordRequired": "Şifre tekrarı gerekli",
+  "secureYourAccount": "Hesabınızı güvende tutun",
+  "addressesLoadFailed": "Adresler yüklenemedi",
+  "deleteAddressTitle": "Adresi Sil",
+  "deleteAddressConfirm": "Bu adresi silmek istediğinizden emin misiniz?",
+  "delete": "Sil",
+  "addressDeleted": "Adres silindi",
+  "defaultAddressUpdated": "Varsayılan adres güncellendi",
+  "manageDeliveryAddresses": "Teslimat adreslerinizi yönetin",
+  "noAddressesYet": "Henüz adres eklenmemiş",
+  "tapToAddAddress": "Yeni adres eklemek için + butonuna tıklayın",
+  "defaultLabel": "Varsayılan",
+  "edit": "Düzenle",
+  "setAsDefault": "Varsayılan Yap",
+  "addressCountSingular": "1 adres",
+  "addressCountPlural": "{count} adres",
+  "locationServicesDisabled": "Konum servisleri devre dışı",
+  "pleaseSelectLocation": "Lütfen bir konum seçin",
+  "selectedLocation": "Seçilen Konum",
+  "addressTitleOptional": "Adres Başlığı (Opsiyonel)",
+  "canBeLeftEmpty": "Boş bırakılabilir",
+  "address": "Adres",
+  "city": "Şehir",
+  "district": "İlçe",
+  "selectOrDragMarkerOnMap": "Haritada bir konum seçin veya işaretçiyi sürükleyin",
+  "saveAddressButton": "Adresi Kaydet",
+  "selectAddress": "Adres Seç",
+  "selectLocationFromMap": "Haritadan konum seç",
+  "addressAdded": "Adres eklendi",
+  "addressUpdated": "Adres güncellendi",
+  "editAddress": "Adresi Düzenle",
+  "addNewAddress": "Yeni Adres Ekle",
+  "updateAddressInfo": "Adres bilgilerini güncelleyin",
+  "enterDeliveryAddressDetails": "Teslimat adresi bilgilerini girin",
+  "addressTitleHint": "Adres Başlığı (Ev, İş, vb.)",
+  "titleRequired": "Başlık gerekli",
+  "selectAddressFromMap": "Haritadan Adres Seç",
+  "fullAddress": "Açık Adres",
+  "addressRequired": "Adres gerekli",
+  "cityRequired": "Şehir gerekli",
+  "districtRequired": "İlçe gerekli",
+  "postalCodeOptional": "Posta Kodu (Opsiyonel)",
+  "updateAddressButton": "Adresi Güncelle",
+  "updateAddressDetails": "Adres detaylarını güncelle",
+  "createNewAddress": "Yeni adres oluştur",
+  "orderUpdates": "Sipariş Güncellemeleri",
+  "orderUpdatesDescription": "Sipariş durumu değişikliklerinde bildirim al",
+  "promotions": "Kampanyalar",
+  "promotionsDescription": "Özel teklifler ve kampanyalar",
+  "newProductsDescription": "Yeni ürün eklendiğinde bildirim al",
+  "settingsSaved": "Ayarlar kaydedildi",
+  "manageNotificationPreferences": "Bildirim tercihlerinizi yönetin",
+  "orderHistoryDescription": "Geçmiş siparişlerinizi görüntüleyin",
+  "myAddressesDescription": "Teslimat adreslerinizi yönetin",
+  "changePasswordSubtitle": "Şifrenizi değiştirin ve güvenliği artırın",
+  "notificationSettingsDescription": "Bildirim tercihlerinizi yönetin",
+  "selectLanguageDescription": "Uygulama dilini değiştirin",
+  "legalDocumentsDescription": "Kullanım şartları ve politikalar",
+  "helpCenterDescription": "SSS ve destek hattı",
+  "logoutDescription": "Hesabınızdan çıkış yapın",
+  "vendorRegister": "Satıcı Kaydı",
+  "talabiBusiness": "Talabi Business",
+  "createBusinessAccount": "İşletme Hesabı Oluştur",
+  "createYourStoreAndStartSelling": "Mağazanızı oluşturun ve satışa başlayın",
+  "businessName": "İşletme Adı",
+  "businessNameRequired": "İşletme adı gerekli",
+  "phoneNumberRequired": "Telefon numarası gerekli",
+  "createVendorAccount": "Satıcı Hesabı Oluştur",
+  "alreadyHaveVendorAccount": "Zaten satıcı hesabınız var mı? ",
+  "isCustomerAccount": "Müşteri hesabı mı? ",
+  "emailAlreadyExists": "Bu email adresi ile zaten bir hesap bulunmaktadır.",
+  "enterFourDigitCode": "Lütfen 4 haneli kodu giriniz",
+  "emailVerifiedSuccess": "Email adresi başarıyla doğrulandı",
+  "emailVerifiedLoginFailed": "Email doğrulandı ancak otomatik giriş başarısız. Lütfen giriş yapın.",
+  "verificationFailed": "Doğrulama başarısız",
+  "verificationCodeResent": "Doğrulama kodu yeniden gönderildi",
+  "codeSendFailed": "Kod gönderilemedi",
+  "fourDigitVerificationCode": "4 Haneli Doğrulama Kodu",
+  "enterCodeSentToEmail": "{email} adresine gönderilen 4 haneli kodu giriniz",
+  "@enterCodeSentToEmail": {
+    "placeholders": {
+      "email": {}
+    }
+  },
+  "@codeExpiresIn": {
+    "placeholders": {
+      "time": {}
+    }
+  },
+  "resendCode": "Tekrar Kod Gönder",
+  "alreadyReviewedMessage": "Bu ürüne daha önce puan verdiniz.",
+  "writeReview": "Yorum Yaz",
+  "courierLogin": "Kurye Girişi",
+  "courierWelcome": "Hoş Geldin Kurye!",
+  "courierSubtitle": "Teslimatlarını yönetmek için giriş yap",
+  "areYouCourier": "Kurye misiniz?",
+  "courierSignIn": "Kurye Girişi",
+  "courierLoginLink": "Kurye Girişi",
+  "roleCustomer": "Müşteri",
+  "roleVendor": "Satıcı",
+  "roleCourier": "Kurye",
+  "roleAdmin": "Yönetici",
+  "activeDeliveries": "Aktif Teslimatlar",
+  "deliveryHistory": "Teslimat Geçmişi",
+  "earnings": "Kazançlar",
+  "deliveries": "Teslimatlar",
+  "noActiveDeliveries": "Aktif teslimat yok",
+  "courierProfileNotFound": "Kurye profili bulunamadı",
+  "profileUpdatedSuccessfully": "Profil başarıyla güncellendi",
+  "invalidStatus": "Geçersiz durum. Geçerli değerler: Offline, Available, Busy, Break, Assigned",
+  "cannotGoAvailableOutsideWorkingHours": "Çalışma saatleri dışında müsait olamazsınız",
+  "cannotGoOfflineWithActiveOrders": "Aktif siparişleriniz varken çevrimdışı olamazsınız",
+  "statusUpdated": "Durum güncellendi",
+  "locationUpdatedSuccessfully": "Konum başarıyla güncellendi",
+  "invalidLatitude": "Geçersiz enlem",
+  "invalidLongitude": "Geçersiz boylam",
+  "orderAcceptedSuccessfully": "Sipariş başarıyla kabul edildi",
+  "orderRejectedSuccessfully": "Sipariş başarıyla reddedildi",
+  "orderPickedUpSuccessfully": "Sipariş başarıyla alındı",
+  "orderDeliveredSuccessfully": "Sipariş başarıyla teslim edildi",
+  "deliveryProofSubmittedSuccessfully": "Teslimat kanıtı başarıyla gönderildi",
+  "orderNotFoundOrNotAssigned": "Sipariş bulunamadı veya size atanmamış",
+  "orderMustBeDeliveredBeforeSubmittingProof": "Teslimat kanıtı göndermeden önce sipariş teslim edilmiş olmalı",
+  "failedToAcceptOrder": "Sipariş kabul edilemedi. Zaten alınmış veya iptal edilmiş olabilir",
+  "failedToRejectOrder": "Sipariş reddedilemedi",
+  "failedToPickUpOrder": "Sipariş alınamadı",
+  "failedToDeliverOrder": "Sipariş teslim edilemedi",
+  "failedToLoadProfile": "Profil yüklenemedi",
+  "failedToUpdateStatus": "Durum güncellenemedi",
+  "failedToUpdateLocation": "Konum güncellenemedi",
+  "failedToLoadStatistics": "İstatistikler yüklenemedi",
+  "failedToLoadActiveOrders": "Aktif siparişler yüklenemedi",
+  "failedToLoadOrderDetail": "Sipariş detayı yüklenemedi",
+  "failedToLoadTodayEarnings": "Bugünkü kazançlar yüklenemedi",
+  "failedToLoadWeeklyEarnings": "Haftalık kazançlar yüklenemedi",
+  "failedToLoadMonthlyEarnings": "Aylık kazançlar yüklenemedi",
+  "failedToLoadEarningsHistory": "Kazanç geçmişi yüklenemedi",
+  "failedToSubmitProof": "Teslimat kanıtı gönderilemedi",
+  "failedToUpdateProfile": "Profil güncellenemedi",
+  "failedToUploadImage": "Resim yüklenemedi",
+  "noFileUploaded": "Dosya yüklenmedi",
+  "internalServerErrorDuringUpload": "Yükleme sırasında sunucu hatası oluştu",
+  "checkAvailability": "Müsaitlik Kontrolü",
+  "orderHistory": "Sipariş Geçmişi",
+  "businessSettings": "İşletme Ayarları",
+  "businessActive": "İşletme Aktif",
+  "customersCanPlaceOrders": "Müşteriler sipariş verebilir",
+  "orderTakingClosed": "Sipariş alımı kapalı",
+  "businessOperations": "İşletme İşlemleri",
+  "minimumOrderAmount": "Minimum Sipariş Tutarı",
+  "estimatedDeliveryTime": "Tahmini Teslimat Süresi (dakika)",
+  "enterValidAmount": "Geçerli bir tutar girin",
+  "enterValidTime": "Geçerli bir süre girin",
+  "optional": "Opsiyonel",
+  "deliveryFee": "Teslimat Ücreti",
+  "addressRequiredTitle": "Adres Gerekli",
+  "addressRequiredMessage": "Sipariş vermek için önce bir teslimat adresi eklemeniz gerekiyor.",
+  "addAddress": "Adres Ekle",
+  "legalDocuments": "Yasal Belgeler",
+  "termsOfUse": "Kullanım Şartları",
+  "privacyPolicy": "Gizlilik Politikası",
+  "refundPolicy": "İade ve İptal Politikası",
+  "distanceSalesAgreement": "Mesafeli Satış Sözleşmesi",
+  "loadingContent": "İçerik yükleniyor...",
+  "contentNotAvailable": "İçerik mevcut değil",
+  "error": "Hata",
+  "profileUpdated": "Profil güncellendi",
+  "updatePersonalInfo": "Kişisel bilgilerinizi güncelleyin",
+  "phoneNumber": "Telefon Numarası",
+  "profileImageUrl": "Profil Resmi URL",
+  "dateOfBirth": "Doğum Tarihi",
+  "notSelected": "Seçilmedi",
+  "profileLoadFailed": "Profil yüklenemedi",
+  "settingsUpdateFailed": "Ayarlar güncellenemedi",
+  "notifications": "Bildirimler",
+  "pushNotifications": "Anlık Bildirimler",
+  "promotionalNotifications": "Promosyon Bildirimleri",
+  "newProducts": "Yeni Ürünler",
+  "more": "Daha Fazla",
+  "accessibilityAndDisplay": "Erişilebilirlik ve Görünüm",
+  "helpCenter": "Yardım Merkezi",
+  "howCanWeHelpYou": "Size nasıl yardımcı olabiliriz?",
+  "faq": "SSS",
+  "frequentlyAskedQuestions": "Sıkça sorulan sorular",
+  "contactSupport": "Destek ile İletişim",
+  "callUs": "Bizi Arayın",
+  "liveChat": "Canlı Sohbet",
+  "available24x7": "7/24 ulaşılabilir",
+  "close": "Kapat",
+  "logoutConfirmTitle": "Çıkış Yap",
+  "logoutConfirmMessage": "Hesabınızdan çıkmak istediğinize emin misiniz?",
+  "passwordsDoNotMatch": "Şifreler eşleşmiyor",
+  "passwordChangedSuccess": "Şifre başarıyla değiştirildi",
+  "changePasswordDescription": "Mevcut şifrenizi girin ve yeni şifrenizi seçin",
+  "currentPassword": "Mevcut Şifre",
+  "currentPasswordRequired": "Mevcut şifre gerekli",
+  "newPassword": "Yeni Şifre",
+  "newPasswordRequired": "Yeni şifre gerekli",
+  "confirmNewPassword": "Şifre Tekrarı",
+  "confirmPasswordRequired": "Şifre tekrarı gerekli",
+  "secureYourAccount": "Hesabınızı güvende tutun",
+  "addressesLoadFailed": "Adresler yüklenemedi",
+  "deleteAddressTitle": "Adresi Sil",
+  "deleteAddressConfirm": "Bu adresi silmek istediğinizden emin misin?",
+  "delete": "Sil",
+  "addressDeleted": "Adres silindi",
+  "defaultAddressUpdated": "Varsayılan adres güncellendi",
+  "manageDeliveryAddresses": "Teslimat adreslerinizi yönetin",
+  "noAddressesYet": "Henüz adres eklenmemiş",
+  "tapToAddAddress": "Yeni adres eklemek için + butonuna tıklayın",
+  "defaultLabel": "Varsayılan",
+  "edit": "Düzenle",
+  "setAsDefault": "Varsayılan Yap",
+  "addressCountSingular": "1 adres",
+  "addressCountPlural": "{count} adres",
+  "locationServicesDisabled": "Konum servisleri devre dışı",
+  "pleaseSelectLocation": "Lütfen bir konum seçin",
+  "selectedLocation": "Seçilen Konum",
+  "addressTitleOptional": "Adres Başlığı (Opsiyonel)",
+  "canBeLeftEmpty": "Boş bırakılabilir",
+  "address": "Adres",
+  "city": "Şehir",
+  "district": "İlçe",
+  "selectOrDragMarkerOnMap": "Haritada bir konum seçin veya işaretçiyi sürükleyin",
+  "saveAddressButton": "Adresi Kaydet",
+  "selectAddress": "Adres Seç",
+  "selectLocationFromMap": "Haritadan konum seç",
+  "addressAdded": "Adres eklendi",
+  "addressUpdated": "Adres güncellendi",
+  "editAddress": "Adresi Düzenle",
+  "addNewAddress": "Yeni Adres Ekle",
+  "updateAddressInfo": "Adres bilgilerini güncelleyin",
+  "enterDeliveryAddressDetails": "Teslimat adresi bilgilerini girin",
+  "addressTitleHint": "Adres Başlığı (Ev, İş, vb.)",
+  "titleRequired": "Başlık gerekli",
+  "selectAddressFromMap": "Haritadan Adres Seç",
+  "fullAddress": "Açık Adres",
+  "addressRequired": "Adres gerekli",
+  "cityRequired": "Şehir gerekli",
+  "districtRequired": "İlçe gerekli",
+  "postalCodeOptional": "Posta Kodu (Opsiyonel)",
+  "updateAddressButton": "Adresi Güncelle",
+  "updateAddressDetails": "Adres detaylarını güncelle",
+  "createNewAddress": "Yeni adres oluştur",
+  "orderUpdates": "Sipariş Güncellemeleri",
+  "orderUpdatesDescription": "Sipariş durumu değişikliklerinde bildirim al",
+  "promotions": "Kampanyalar",
+  "promotionsDescription": "Özel teklifler ve kampanyalar",
+  "newProductsDescription": "Yeni ürün eklendiğinde bildirim al",
+  "settingsSaved": "Ayarlar kaydedildi",
+  "manageNotificationPreferences": "Bildirim tercihlerinizi yönetin",
+  "orderHistoryDescription": "Geçmiş siparişlerinizi görüntüleyin",
+  "myAddressesDescription": "Teslimat adreslerinizi yönetin",
+  "changePasswordSubtitle": "Şifrenizi değiştirin ve güvenliği artırın",
+  "notificationSettingsDescription": "Bildirim tercihlerinizi yönetin",
+  "selectLanguageDescription": "Uygulama dilini değiştirin",
+  "legalDocumentsDescription": "Kullanım şartları ve politikalar",
+  "helpCenterDescription": "SSS ve destek hattı",
+  "logoutDescription": "Hesabınızdan çıkış yapın",
+  "vendorRegister": "Satıcı Kaydı",
+  "talabiBusiness": "Talabi Business",
+  "createBusinessAccount": "İşletme Hesabı Oluştur",
+  "createYourStoreAndStartSelling": "Mağazanızı oluşturun ve satışa başlayın",
+  "businessName": "İşletme Adı",
+  "businessNameRequired": "İşletme adı gerekli",
+  "phoneNumberRequired": "Telefon numarası gerekli",
+  "createVendorAccount": "Satıcı Hesabı Oluştur",
+  "alreadyHaveVendorAccount": "Zaten satıcı hesabınız var mı? ",
+  "isCustomerAccount": "Müşteri hesabı mı? ",
+  "emailAlreadyExists": "Bu email adresi ile zaten bir hesap bulunmaktadır.",
+  "enterFourDigitCode": "Lütfen 4 haneli kodu giriniz",
+  "emailVerifiedSuccess": "Email adresi başarıyla doğrulandı",
+  "emailVerifiedLoginFailed": "Email doğrulandı ancak otomatik giriş başarısız. Lütfen giriş yapın.",
+  "verificationFailed": "Doğrulama başarısız",
+  "verificationCodeResent": "Doğrulama kodu yeniden gönderildi",
+  "codeSendFailed": "Kod gönderilemedi",
+  "fourDigitVerificationCode": "4 Haneli Doğrulama Kodu",
+  "enterCodeSentToEmail": "{email} adresine gönderilen 4 haneli kodu giriniz",
+  "@enterCodeSentToEmail": {
+    "placeholders": {
+      "email": {}
+    }
+  },
+  "codeExpiresIn": "Kod {time} sonra geçersiz olacak",
+  "@codeExpiresIn": {
+    "placeholders": {
+      "time": {}
+    }
+  },
+  "resendCode": "Tekrar Kod Gönder",
+  "settingsLoadError": "Ayarlar yüklenemedi: {error}",
+  "@settingsLoadError": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "settingsUpdated": "Ayarlar güncellendi",
+  "errorWithMessage": "Hata: {message}",
+  "@errorWithMessage": {
+    "placeholders": {
+      "message": {}
+    }
+  },
+  "save": "Kaydet",
+  "reviewApproved": "Yorum onaylandı",
+  "reviewApproveError": "Yorum onaylanırken hata oluştu: {error}",
+  "@reviewApproveError": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "rejectReview": "Yorumu Reddet",
+  "rejectReviewConfirmation": "Bu yorumu reddetmek istediğinizden emin misiniz? Bu işlem geri alınamaz.",
+  "cancel": "İptal",
+  "reject": "Reddet",
+  "reviewRejected": "Yorum reddedildi",
+  "reviewRejectError": "Yorum reddedilirken hata oluştu: {error}",
+  "@reviewRejectError": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "reviewDetail": "Yorum Detayı",
+  "userId": "Kullanıcı ID: {id}",
+  "@userId": {
+    "placeholders": {
+      "id": {}
+    }
+  },
+  "rating": "Puan",
+  "comment": "Yorum",
+  "noComment": "Yorum yok",
+  "date": "Tarih: {date}",
+  "@date": {
+    "placeholders": {
+      "date": {}
+    }
+  },
+  "approve": "Onayla",
+  "verify": "Onayla",
+  "placeOrder": "Sipariş Ver",
+  "checkoutTitle": "Sipariş Onayı",
+  "deliveryAddress": "Teslimat Adresi",
+  "selectAddress": "Adres Seç",
+  "changeAddress": "Değiştir",
+  "paymentMethod": "Ödeme Yöntemi",
+  "cash": "Nakit",
+  "creditCard": "Kredi Kartı",
+  "mobilePayment": "Mobil Ödeme",
+  "comingSoon": "Yakında",
+  "orderNote": "Sipariş Notu",
+  "orderNotePlaceholder": "Kurye için not ekleyin (opsiyonel)",
+  "estimatedDelivery": "Tahmini Teslimat",
+  "minutes": "dakika",
+  "orderSummary": "Sipariş Özeti",
+  "confirmOrder": "Siparişi Onayla",
+  "pleaseSelectAddress": "Lütfen teslimat adresi seçin",
+  "pleaseSelectPaymentMethod": "Lütfen ödeme yöntemi seçin",
+  "orderCreatedSuccess": "Siparişiniz başarıyla oluşturuldu!",
+  "noAddressFound": "Kayıtlı adres bulunamadı",
+  "addNewAddress": "Yeni Adres Ekle",
+  "cashDescription": "Nakit olarak kapıda kuryeye teslim edebilirsiniz.",
+  "paymentComingSoonDescription": "Bu ödeme yöntemi yakında hizmete girecektir."
 }
-
